# homelab

./: .gitignore  .release-please-manifest.json  README.md  argo-app-of-apps.yaml  bootstrap.sh  dagger.json  helmfile.yaml  ingress.yaml  kustomization.yaml  pyproject.toml  release-please-config.json
app/: main.py
app-of-apps/: README.md
apps/hello-dagger-fastapi-rye/: pyproject.toml
apps/hello-dagger-fastapi-rye/k8s/overlays/prod/: ingress-patch.yaml  kustomization.yaml
apps/hello-dagger-fastapi-rye/tests/: test_main.py
apps/hello-world/: CHANGELOG.md  README.md  dagger.json  pyproject.toml
apps/hello-world/app/: main.py
apps/hello-world/dagger/src/main/: __init__.py
apps/hello-world/k8s/base/: deployment.yaml  kustomization.yaml
base/: alertmanager_kube-prometheus-stack-alertmanager.yaml  clusterrole_kube-prometheus-stack-admission.yaml  clusterrole_kube-prometheus-stack-kube-state-metrics.yaml  clusterrole_kube-prometheus-stack-prometheus.yaml  clusterrole_tailscale-operator.yaml  clusterrolebinding_kube-prometheus-stack-kube-state-metrics.yaml  clusterrolebinding_kube-prometheus-stack-prometheus.yaml  clusterrolebinding_tailscale-operator.yaml  configmap_kube-prometheus-stack-etcd.yaml  configmap_kube-prometheus-stack-grafana-test.yaml  configmap_kube-prometheus-stack-kubelet.yaml  configmap_kube-prometheus-stack-namespace-by-pod.yaml  configmap_kube-prometheus-stack-nodes-aix.yaml  configmap_kube-prometheus-stack-scheduler.yaml  kustomization.yaml  mutatingwebhookconfiguration_kube-prometheus-stack-admission.yaml  role_proxies.yaml  (+20 more)
(+276 files in other folders)
