[project]
name = "hello-world"
version = "0.1.0"
description = "Hello World FastAPI app with Dagger"
authors = [
    { name = "Patrick Paulino", email = "pmpaulino@gmail.com" }
]
dependencies = [
    "fastapi[standard]>=0.115.0",
]
readme = "README.md"
requires-python = ">=3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pytest>=8.3.3",
]

[project.entry-points."dagger.mod"]
main_object = "main:HelloWorld"
